--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-router-dom": "^6.6.2",
         "react-scripts": "^5.0.1",
         "react-transition-group": "^4.4.2",
+        "react-window": "^1.8.10",
         "styled-components": "^6.1.13",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
