--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@mui/icons-material": "^6.1.6",
         "@mui/material": "^6.1.6",
         "@mui/styled-engine-sc": "^6.1.6",
+        "@radix-ui/react-alert-dialog": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
         "bootstrap": "^5.2.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
