--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.13.3",
-        "@emotion/styled": "^11.13.0",
+        "@emotion/react": "^11.13.5",
+        "@emotion/styled": "^11.13.5",
         "@fontsource/roboto": "^5.1.0",
         "@mui/icons-material": "^6.1.6",
-        "@mui/material": "^6.1.6",
-        "@mui/styled-engine-sc": "^6.1.6",
+        "@mui/lab": "^6.0.0-beta.16",
+        "@mui/material": "^6.1.8",
+        "@mui/styled-engine-sc": "^6.1.8",
+        "@mui/x-tree-view": "^7.22.1",
         "@radix-ui/react-alert-dialog": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.0",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "emailjs-com": "^3.2.0",
         "lucide-react": "^0.456.0",
         "react": "^18.2.0",
-        "react-bootstrap": "^2.7.0",
+        "react-bootstrap": "^2.10.6",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
         "react-icons": "^4.1.0",
