--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@emotion/styled": "^11.13.5",
         "@fontsource/roboto": "^5.1.0",
         "@mui/icons-material": "^6.1.6",
+        "@mui/joy": "^5.0.0-beta.48",
         "@mui/lab": "^6.0.0-beta.16",
         "@mui/material": "^6.1.8",
         "@mui/styled-engine-sc": "^6.1.8",
